# BiometryFaceRecognition

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
include/: Graph.h  PhotosContainer.h
src/: Graph.cpp  PhotosContainer.cpp  Program.cpp
